Authorization done using JWT validation and implementing a middleware and changed the followers table to make more sense
