# docs/swagger.json
@@ -612,15 +612,6 @@
                         "name": "userID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "follow user payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/cmd_api.FollowUser"
-                        }
                     }
                 ],
                 "responses": {
@@ -659,15 +650,6 @@
                         "name": "userID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "follow user payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/cmd_api.FollowUser"
-                        }
                     }
                 ],
                 "responses": {
@@ -733,14 +715,6 @@
                     "type": "string",
                     "maxLength": 72,
                     "minLength": 3
-                }
-            }
-        },
-        "cmd_api.FollowUser": {
-            "type": "object",
-            "properties": {
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
